Fix image alignment

--- a/w3magz/style.css
+++ b/w3magz/style.css
@@ -288,10 +288,6 @@ nav ul{
 	margin: 0 0 20px;
 	text-align:justify;
 }
-.post-entry img {
-	float:left;
-	margin:10px 10px 10px 0;
-}
 
 .post-entry ul {
 	list-style-position:inside;
